# llvm-custom-opt

./: .gitignore  CMakeLists.txt  README.md  generate_ll.sh  make_llvm.sh
src/: Example.cpp  MyCFG.cpp  MyCFG.h  MyDeadCodeEliminationPass.cpp  dae.cpp
tests/: input.cpp  input.ll  input1.cpp  input1.ll  input2.cpp  input2.ll  input3.cpp  input3.ll  input4.cpp  input4.ll  output.ll  output1.ll  output2.ll  output3.ll  output4.ll
